--- a/connectfour/views/web/static/stylesheets/src/game.sass
+++ b/connectfour/views/web/static/stylesheets/src/game.sass
@@ -7,9 +7,11 @@
 
   #game-start
     left: 0
+    z-index: 3
 
   #game-room
     right: 0
+    z-index: 2
 
     td
       padding-right: 5px
@@ -17,6 +19,7 @@
   #game-feedback
     left: 0
     width: 100%
+    z-index: 1
     text-align: center
 
   #game-board
